--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <img src="https://drive.google.com/file/d/1VlJ5KHdBjF-hb0jXXX_SLE-JlKZmJG2r/view?usp=drive_link" alt="">
         
         <script src="" async defer></script>
     </body>
