--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -19,7 +19,7 @@
         <![endif]-->
         <img src="https://drive.google.com/file/d/1VlJ5KHdBjF-hb0jXXX_SLE-JlKZmJG2r/view?usp=drive_link" 
              alt="bruh">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt11273012%2F&psig=AOvVaw2BDhG4clEsiN6krOs5Px8D&ust=1694530826563000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCICtqLHpooEDFQAAAAAdAAAAABAE" 
+        <img src="https://image.spreadshirtmedia.com/image-server/v1/mp/products/T1459A839PA3861PT28D1035433745W10000H6697/views/1,width=1200,height=630,appearanceId=839,backgroundColor=F2F2F2/bruh-meme-hoodie-tik-tok-style-sticker.jpg" 
              alt="img">
         
         <script src="" async defer></script>
