--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img src="https://drive.google.com/file/d/1VlJ5KHdBjF-hb0jXXX_SLE-JlKZmJG2r/view?usp=drive_link" 
+        <img src="https://drive.google.com/file/d/1VlJ5KHdBjF-hb0jXXX_SLE-JlKZmJG2r/view" 
              alt="bruh">
         <img src="https://image.spreadshirtmedia.com/image-server/v1/mp/products/T1459A839PA3861PT28D1035433745W10000H6697/views/1,width=1200,height=630,appearanceId=839,backgroundColor=F2F2F2/bruh-meme-hoodie-tik-tok-style-sticker.jpg" 
              alt="img">
