--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <style rel="stylesheet" href="index.css"></style>
     </head>
     <body>
         <h1>Hello my boy</h1>
