--- a/my_book_starting_motion.html
+++ b/my_book_starting_motion.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
+        <a href="index.html"><h2>Back</h2></a>
         <iframe style="position: relative;left: 5vw;right: 5vw;width: 90vw; height: fit-content;" 
         src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true"></iframe>
         <!--[if lt IE 7]>
