--- a/my_book_starting_motion.html
+++ b/my_book_starting_motion.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="">
     </head>
         <a href="index.html"><h2>Back</h2></a>
-        <iframe style="position: relative;left: 5vw;right: 5vw;bottom: 0%;top: 10%;width: 90vw;min-height: 100vh;" 
+        <iframe style="position: relative;left: 5vw;right: 5vw;width: 90vw;min-height: 100vh;" 
         src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true"></iframe>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
