--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -15,7 +15,7 @@
     <body style="margin: 0%;">
         
     
-        <a href="index.html"><h2>Back</h2></a>
+        <a href="../index.html"><h2>Back</h2></a>
         <iframe allow="fullscreen"
         style="margin: 0%;
             position: relative;
