--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>my super ugly site</title>
         <link rel="stylesheet" href="home.css">
-        <script type="text/javascript" defer src="/emot-rgb.github.io/adding_sheet_comments.js"></script>
+        <script type="module" src="emot-rgb.github.io/adding_sheet_comments.js"></script>
     </head>
     
     <body>
