--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -11,7 +11,7 @@
         
     
         <a href="../index.html"><h2>Back</h2></a>
-        <iframe class="bookstuff" allow="fullscreen"
+        <iframe id="bruh" class="bookstuff" allow="fullscreen"
         style="
             position:absolute;
             align-self: center;
@@ -30,7 +30,7 @@
         <![endif]-->
     </body>
         <script src="" async defer>
-            var iframe = document.getElementById('iframe');
+            var iframe = document.getElementById('bruh');
             var style = document.createElement('style');
             style.textContent =
             'div {' +
