--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -17,10 +17,11 @@
             align-self: center;
             left: 5vw;
             right: 5vw;
-            width: 90vw;
-            min-height: 90vw;
-            border-radius: 50px;
-            border-color: black;"
+            width: 90vw !important;
+            min-height: 90vh;
+            border-radius: 70px;
+            border-color: rgb(4, 5, 83);
+            border-width: 10px;"
         src ="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true"
         
         ></iframe>
@@ -30,13 +31,14 @@
         <![endif]-->
     </body>
         <script src="" async defer>
-            var iframe = document.getElementById('bruh');
-            var style = document.createElement('style');
-            style.textContent =
-            'div {' +
-            '  width: 90vw;' +
-            '}' 
-            ;
-            iframe.contentDocument.head.appendChild(style);
+var iframe = document.getElementById('bruh');
+var style = document.createElement('style');
+style.textContent =
+  'div {' +
+  '    width: 90vw !important;' +
+  '    width: 90vw !important;' +
+  '}' 
+;
+iframe.contentDocument.head.appendChild(style);
         </script>
 </html>
