--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -11,7 +11,7 @@
         
     
         <a href="../index.html"><h2>Back</h2></a>
-        <iframe id="bruh" class="bookstuff" allow="fullscreen"
+        <iframe sandbox="allow-top-navigation" id="bruh" class="bookstuff" allow="fullscreen"
         style="
             position:absolute;
             align-self: center;
