changed it again

--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -15,7 +15,7 @@
         </h2>
     </a>
     <iframe 
-        src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=false">
+        src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true">
     </iframe>
 
         
