--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -21,7 +21,7 @@
             Back
         </h2>
     </a>
-    <iframe 
+    <iframe style="width: auto; height: 90vh; border-color: transparent;"
         src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true">
     </iframe>
 
