shit looks better now

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <div class="page_block">
             <H2>trying to make a book</H2>
         </div>
+        <div class="page_block">
+            <h2>game dev stuff</h2>
+            <img 
+                src="game_dev_assets/2021-03-21-202610-Desenho 4.png" 
+                style=
+                    "width: 30vw;
+                     border-radius: 20px;" 
+                alt="">
+        </div>
 
     </a>
     <div>
