--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -22,7 +22,7 @@
         </h2>
     </a>
     <iframe style="width: 100vw; max-width: 1122.9pt; height: 80vh; border-color: transparent;"
-        src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true">
+        src="https://docs.google.com/document/d/e/2PACX-1vRNplQ31SZFSFR_njvM6BB3CCicqsHvVVO407gYGi3UvidKm01DJuH2Rjd_bHE5RcU1Uso-HvGeOcIH/pub">
     </iframe>
 
         
