--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -16,12 +16,12 @@
         </script>
     </head>
     <body style="margin: 0%;">
-    <a href="../index.html">
+    <a style="height: 10vh;" href="../index.html">
         <h2>
             Back
         </h2>
     </a>
-    <iframe style="width: 100vw; max-width: 1122.9pt; height: 80vh; border-color: transparent;"
+    <iframe style="width: 100vw; height: 120vh; border-color: transparent;"
         src="https://docs.google.com/document/d/e/2PACX-1vRNplQ31SZFSFR_njvM6BB3CCicqsHvVVO407gYGi3UvidKm01DJuH2Rjd_bHE5RcU1Uso-HvGeOcIH/pub">
     </iframe>
 
