--- a/book_stuff/my_book_starting_motion.html
+++ b/book_stuff/my_book_starting_motion.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../home.css">
+        <link rel="stylesheet" href="../o_css_da_pagina/home_style.css">
         <script type="module" >
             frame.addEventListener("load", ev => {
             const new_style_element = document.createElement("style");
@@ -21,8 +21,8 @@
             Back
         </h2>
     </a>
-    <iframe style="width: 100vw; height: 120vh; border-color: transparent;"
-        src="https://docs.google.com/document/d/e/2PACX-1vRNplQ31SZFSFR_njvM6BB3CCicqsHvVVO407gYGi3UvidKm01DJuH2Rjd_bHE5RcU1Uso-HvGeOcIH/pub">
+    <iframe style="width: 100vw; height: 90vh; border-color: transparent;"
+        src="https://docs.google.com/document/d/e/2PACX-1vRNplQ31SZFSFR_njvM6BB3CCicqsHvVVO407gYGi3UvidKm01DJuH2Rjd_bHE5RcU1Uso-HvGeOcIH/pub?embedded=true">
     </iframe>
 
         
