--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>emot-rgb blog</title>
-        <link rel="stylesheet" href="home_style.css">
+        <link rel="stylesheet" href="o_css_da_pagina/home_style.css">
         <script type="module" src=""></script>
     </head>
     <body class="page_body">
@@ -34,9 +34,7 @@
                 class="page_block_img"
                 src="game_dev_assets/2021-03-21-202610-Desenho 4.png" 
                 style="
-                    margin-left: 10cqmax;
-                    max-width: 150px;
-                    max-height: 150px;
+                    max-width: 35vw;
                     border-radius: 20px;" 
                 alt="link_block_emot-rgb's_itch.io_page">
         </div>
