--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
             Social stuff
         </H1>
         <a target="_blank" href="https://mastodon.social/@emot_RGB">
-            <div class="sub_page_block">
+            <div style="width: 20vw;" class="sub_page_block">
                 <h2 class="page_block_linked_text">
                     Mastodon
                 </h2>
+                <img style="width: 10vw;" class="page_block_img" src="social_stuff/mastodon/Mastodon_logo.svg" alt="mastodon logo">
             </div>
         </a>
     </div>
@@ -67,5 +68,6 @@
         </a>
     </div>
 </body>
-
+<br>
+<br>
 </html>
