--- a/book_stuff/starting_motion/my_book_starting_motion.html
+++ b/book_stuff/starting_motion/my_book_starting_motion.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../o_css_da_pagina/home_style.css">
+        <link rel="stylesheet" href="../../o_css_da_pagina/home_style.css">
         <script type="module" >
             frame.addEventListener("load", ev => {
             const new_style_element = document.createElement("style");
@@ -16,11 +16,6 @@
         </script>
     </head>
     <body style="margin: 0%;">
-    <a style="height: 10vh;" href="../index.html">
-        <h2>
-            Back
-        </h2>
-    </a>
     <iframe class="reading_book"
         src="https://docs.google.com/document/d/e/2PACX-1vQLTfHgKOYXqOG123zKOnnuaH9hp1_Iot0fZ9JNyTzTYYgFnaFhdrkYHGoiQNysXt_bNuyXCW9cW-7q/pub?embedded=true">
     </iframe>
