--- a/index.html
+++ b/index.html
@@ -52,22 +52,20 @@
                 <h2 class="page_block_linked_text">
                     Mastodon
                 </h2>
-                <img style="width: 10vw;" class="page_block_img" src="social_stuff/mastodon/Mastodon_logo.svg" alt="mastodon logo">
+                <img style="width: 10vw;" class="page_block_img" src="social_stuff/mastodon/Mastodon_logo.svg"
+                    alt="mastodon logo">
             </div>
         </a>
     </div>
     <div class="page_block">
-        <H1 class="page_block_text">trying to make a book</H1>
-        <a href="book_stuff/my_book_starting_motion.html">
-            <div class="sub_page_block">
-                <H2 class="page_block_linked_text">
-                    Starting Motion
-                </H2>
-                <br><br>
-            </div>
+        <a href="book_stuff\book_stuff.html">
+            <H1 class="page_block_text">
+                trying to make a book
+            </H1>
         </a>
     </div>
 </body>
 <br>
 <br>
+
 </html>
