--- a/book_stuff/starting_motion/book's_plot/storyplot.html
+++ b/book_stuff/starting_motion/book's_plot/storyplot.html
@@ -10,7 +10,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="..\..\o_css_da_pagina\home_style.css">
+    <link rel="stylesheet" href="..\..\..\o_css_da_pagina\home_style.css">
   </head>
   <body class="page_body">
     <h1 id="plotofthestory">Plot of the story</h1>
