--- a/book_stuff/starting_motion/book's_plot/storyplot.html
+++ b/book_stuff/starting_motion/book's_plot/storyplot.html
@@ -1,173 +1,30 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="..\..\..\o_css_da_pagina\home_style.css">
-  </head>
-  <body class="page_body">
-    <h1 id="plotofthestory">Plot of the story</h1>
-<p>This will be 99% bullshit</p>
-<p>Possible introduction to the classmates through Phen(because she has been in that school for some time now)</p>
-<p>Kinetic battery can talk about her parents during the first school day</p>
-<h2 id="protagonistkertel">Protagonist --&gt; Kertel</h2>
-<h3 id="kertelasacharacter">Kertel as a Character</h3>
-<p>Kertel will be a bit of a push over at the start, but i'll try to add some character development on that regard.</p>
-<p>My objective with him is to try and depict someone who stopped following their desire and instead keeps doing what others tell them to.</p>
-<p>For that he'll have to be displaying a overreliance on his other personality's when it comes to making quick or hard choices, letting the one that screams the hardest take control. Those fights for control aren't going to favor Kertel(Blue) because of his calm and mostly logic driven Character.</p>
-<h3 id="personalitys">Personality's</h3>
-<h4 id="kertel_red">Kertel_Red</h4>
-<ul>
-<li><p>Wills name</p>
-<blockquote>
-  <p>Material Me</p>
-</blockquote></li>
-<li><p>Power
-&gt; Control and turn himself into materials of witch he has <a href="#physicalownership">Physical ownership</a> over.</p></li>
-</ul>
-<h4 id="kertel_blue">Kertel_Blue</h4>
-<ul>
-<li><p>Wills name</p>
-<blockquote>
-  <p>UnoKrono.</p>
-</blockquote></li>
-<li><p>Power</p>
-<blockquote>
-  <p>Change the flow of time in his perspective by altering his standard time value (1).</p>
-</blockquote></li>
-<li><p>Given Rule
-&gt; when working with time you only have two options. You either move forward our not.
-&gt;
-&gt;<strong>THERE ARE NO SECOND CHANCES</strong></p></li>
-</ul>
-<h4 id="personalitysneedseparatecharacterarcs">Personality's need separate character arcs</h4>
-<h5 id="kertelbluekertel_blue"><a href="#kertel_blue">Kertel Blue</a></h5>
-<ul>
-<li>Toward zero
-&gt; Learn to work with time and divide one by infinity.</li>
-</ul>
-<h3 id="kertelintro">Kertel Intro</h3>
-<p>From the start of the story I'll have to make it clear trough the way I write that Kertel has multiple personality's without outright telling the reader about it. For that I'll use a dialog similar to the dialog of Percy Jackson part 2 (idk why I never finished the first book but I liked the way it was written, witch gives me another reason to return to that book), where the reader sees the action happening in the book from a higher perspective instead of the perspective of one single character in the story.</p>
-<h2 id="oneofthemaincharactersphen">One of the main characters Phen</h2>
-<h3 id="phenasacharacter">Phen as a Character</h3>
-<p>She has to be direct and spontaneous, witch may prove to be a challenge for me :( (I'm not really direct or spontaneous)</p>
-<h3 id="willshehastwowills">Will (she has two wills)</h3>
-<ul>
-<li>Flames of conquest</li>
-</ul>
-<blockquote>
-  <ul>
-  <li>conquista</li>
-  </ul>
-  <blockquote>
-    <ul>
-    <li><p>Take full (<a href="#authoritarianownership">authoritarian</a> + <a href="#physicalownership">physical</a>) ownership  of a object and the will residing withing while the flames are affecting it.
-    Can give simple tasks to the object.</p></li>
-    <li><p>reconquista</p></li>
-    <li><p>give properties of
-    <a href="#physicalownership">physical ownership</a>
-    to objects where Phen has
-    <a href="#authoritarianownership">authoritarian ownership</a> over.</p></li>
-    </ul>
-  </blockquote>
-</blockquote>
-<ul>
-<li>little bird
-&gt;</li>
-</ul>
-<blockquote>
-  <p>turn into and control paper</p>
-</blockquote>
-<h2 id="workingsofpower">Workings of power</h2>
-<h3 id="will">Will</h3>
-<p>A ability based on your most prominent desire</p>
-<blockquote>
-  <p>(based on the moment of the connection with <strong>the other side</strong> "hooooo spoooookyyyyyy")</p>
-</blockquote>
-<h3 id="waystoobtainpower">Ways to obtain power</h3>
-<ul>
-<li><p>Routing stones --&gt; obtain a <a href="#will">wil</a></p></li>
-<li><p>Empowered constructs --&gt; objects with a <a href="#will">wil</a> of their own or someone gives their <a href="#will">wil</a> to a object</p></li>
-<li><p>Technology</p></li>
-</ul>
-<h3 id="routingstones">Routing stones</h3>
-<ul>
-<li><p>Forcefully connect to the other side and force your will upon reality itself.</p></li>
-<li><p>This process if successful grands the person a will</p></li>
-</ul>
-<h3 id="domainofawillwill">Domain of a <a href="#will">will</a></h3>
-<p><strong>The domain on witch you impose your will determines what rules you can set for everyone and who has to follow those rules while inside the domain domain.</strong></p>
-<h4 id="publicdomain">Public Domain</h4>
-<p>Example : a street, the air, a park.</p>
-<blockquote>
-  <ul>
-  <li>Rules in a public domain apply to everyone in it.</li>
-  </ul>
-</blockquote>
-<h4 id="collectivedomain">Collective domain</h4>
-<p>Example : a house, a console that you bought together with your friends, a company.</p>
-<blockquote>
-  <ul>
-  <li>R</li>
-  </ul>
-</blockquote>
-<pre><code class="mermaid language-mermaid">graph TD;
-    A --&gt; B;
-    B --&gt; C;
-    needs_permission_from_A --&gt; B;
-    doesn't_need_permission --&gt; A;
-    needs_permission_from_A_and_B --&gt; C;
-</code></pre>
-<h4 id="privatedomain">Private domain</h4>
-<h3 id="privilegesofownership">Privileges of ownership</h3>
-<p><strong>Owning something gives you control over it.</strong></p>
-<h4 id="mentalownership">Mental ownership</h4>
-<ul>
-<li>Resides withing your mind.</li>
-</ul>
-<blockquote>
-  <ul>
-  <li>Only the individual may have true access to it.</li>
-  </ul>
-  <blockquote>
-    <ul>
-    <li>It cannot be freely controlled.</li>
-    </ul>
-  </blockquote>
-</blockquote>
-<ul>
-<li><p>Cannot be taken or given without changing it's nature.  </p>
-<blockquote>
-  <ul>
-  <li>If you have a idea and want to share it. You'll have to take that idea and turn it into something else like a song, a drawing or a book.</li></ul>
-</blockquote></li>
-<li><h5 id="iftakenbyforceitstrueessencemaygetmodifiedorevenlostinthenoiseofthemind">If taken by force it's true essence may get modified or even lost in the noise of the mind</h5>
-<blockquote>
-  <ul>
-  <li>In this story I'll need to make the mind something special and very important
-  (you can't just play around with such a delicate thing without expecting any side effects).</li></ul>
-</blockquote></li>
-</ul>
-<h4 id="physicalownership">Physical ownership</h4>
-<ul>
-<li><p>Can be forced on any physical object without a <a href="#will">will</a>.</p>
-<blockquote>
-  <ul>
-  <li>Ease to overwrite if the one overwriting it has <a href="#authoritarianownership">authoritarian ownership</a> over the object.</li></ul>
-</blockquote></li>
-<li><p>Requires direct or indirect physical contact with a object.</p></li>
-</ul>
-<h4 id="authoritarianownership">authoritarian ownership</h4>
-<ul>
-<li><p>You hold legal authority over the object in question.</p></li>
-<li><p>If combined with <a href="#physicalownership">Physical ownership</a>, there is no way to overwrite your <a href="#will">will</a> from that object.</p></li>
-</ul>
-  </body>
+    <head>
+        <title>Starting Motion</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../../o_css_da_pagina/home_style.css">
+        <script type="module" >
+            frame.addEventListener("load", ev => {
+            const new_style_element = document.createElement("style");
+            new_style_element.textContent = ".c14 { max-width: 100vw; }"
+            ev.target.contentDocument.head.appendChild(iframe);
+            });
+        </script>
+    </head>
+    <body style="margin: 0%;">
+    <iframe class="reading_book"
+        src="https://previews.dropbox.com/p/orig/ACbnGij4bQ1LZil1c6u7yIUJZaXOIVxxrCMta3a_OUjTVXaNEzJScQIjgWIIH4aWivopnsVFEggyqi8-_9yTsZ2fA3YL2U0PkPgbhrKw-6A75CccFhfRua4SjkuulxWQbwAOUSbhdxFwy5zhVJHtT_xKnklQ4CAmippCyF4aI-7uMUDXiE_-c3hhWWyUJX2E1DciZuEq1MPK5BMG8uBMuZ9eW38l_MBiXPZJLFaPgzgyJZgeXodE0jZbOIJxQG1GTxgPl6h4Qb4jRRFS-OIKndmaH6sX3w2WJYmHAX-JtYZt91CJ3EC9WVt30NYxheIdILQ/p.html?is_prewarmed=true">
+    </iframe>
+
+
+        
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    </body>
+        <script src="" async defer></script>
 </html>
