--- a/book_stuff/starting_motion/book's_plot/storyplot.html
+++ b/book_stuff/starting_motion/book's_plot/storyplot.html
@@ -17,7 +17,7 @@
     </head>
     <body style="margin: 0%;">
     <iframe class="reading_book"
-        src="https://previews.dropbox.com/p/orig/ACbnGij4bQ1LZil1c6u7yIUJZaXOIVxxrCMta3a_OUjTVXaNEzJScQIjgWIIH4aWivopnsVFEggyqi8-_9yTsZ2fA3YL2U0PkPgbhrKw-6A75CccFhfRua4SjkuulxWQbwAOUSbhdxFwy5zhVJHtT_xKnklQ4CAmippCyF4aI-7uMUDXiE_-c3hhWWyUJX2E1DciZuEq1MPK5BMG8uBMuZ9eW38l_MBiXPZJLFaPgzgyJZgeXodE0jZbOIJxQG1GTxgPl6h4Qb4jRRFS-OIKndmaH6sX3w2WJYmHAX-JtYZt91CJ3EC9WVt30NYxheIdILQ/p.html?is_prewarmed=true">
+        src="https://uc8b33771fb7948a72351d365a96.previews.dropboxusercontent.com/p/orig/ACazfFSs2PjtoCvmkMAWi77W8FYj307AnLgWAZo2U2YRj4yT-rcmaSCvzCaRSm7YaSneei03OMcOUpM_TGFG-73ZQfcHtV8pyrwHgDaF71OqnawEPPeBvl6r9xnBlBx1DlOv_TwAnp90Dhe9GzAWrb6jWtYL-9YTcJbgU1XbOJOGm9kz6twgrCMqyORPPtSjMQ5BSibfu0aNd83oyMs0LVHPh97VfC5G6KnFpkkiFVyNe-tIdb9L6jeW85xUSRr0aRULa14J2MNLcMHkttwkhbmDpB4bGa7sA7pq9Ku1aW7ZCY76FSFDxHsbv8rxyuF8HKhrGH4TwE8YUaUBxMOKEH-kBudd7uQ96R9DbdcTEK2uN3y2hNzOMHTeUuB5hwTDAfI/p.html?is_prewarmed=true">
     </iframe>
 
 
