--- a/index.html
+++ b/index.html
@@ -1,71 +1,11 @@
 <html>
 
 <head>
-    <title>emot-rgb blog</title>
-    <link rel="stylesheet" href="o_css_da_pagina/home_style.css">
-    <script type="module" src=""></script>
+    <meta charset="UTF-8" />
 </head>
-
-<body class="page_body">
-
-
-    <body style="width: 100vw;">
-        <div class="top_menu" style="background-color: rgb(7, 87, 0);width: 100%; display: flex;">
-            <h1>emot-RGB</h1>
-        </div>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-
-
-    </body>
-
-
-
-    <div class="page_block">
-        <a target="_blank" href="https://emot-rgb.itch.io/">
-            <h1 class="page_block_linked_text">GAME DEV stuff</h1>
-            <br>
-            <img class="page_block_img" src="game_dev_assets/2021-03-21-202610-Desenho 4.png"
-                alt="link_block_emot-rgb's_itch.io_page">
-        </a>
-
-        <a target="_blank" href="https://emot-rgb.itch.io/cetris">
-            <div style="" class="sub_page_block">
-
-                <h2 class="page_block_linked_text">
-                    circle break
-                </h2>
-                <br>
-                <img class="page_block_img" src="game_dev_assets/pro_header.png" alt="cetris pic">
-                <br>
-            </div>
-        </a>
-    </div>
-    <div class="page_block">
-        <H1 class="page_block_text">
-            Social stuff
-        </H1>
-        <a target="_blank" href="https://mastodon.social/@emot_RGB">
-            <div style="width: 20vw;" class="sub_page_block">
-                <h2 class="page_block_linked_text">
-                    Mastodon
-                </h2>
-                <img style="width: 10vw;" class="page_block_img" src="social_stuff/mastodon/Mastodon_logo.svg"
-                    alt="mastodon logo">
-            </div>
-        </a>
-    </div>
-    <div class="page_block">
-        <a href="book_stuff\book_stuff.html">
-            <H1 class="page_block_text">
-                trying to make a book
-            </H1>
-        </a>
-    </div>
-</body>
-<br>
-<br>
+<script type="module">
+    import init from './procat.js'
+    init()
+</script>
 
 </html>
